# smart_warehouse_inventory_system

./: .gitignore  .pylintrc  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
inventory/: permissions.py  urls.py
inventory/admin/: __init__.py  fleet_admin.py  product_admin.py  stock_admin.py  warehouse_admin.py
inventory/filters/: fleet_filters.py  warehouse_filters.py
inventory/migrations/: 0001_initial.py  0002_category_slug_product_slug_productimage_slug_and_more.py  0003_vehicle_stockmovement_vehicle.py  0004_fleet_alter_stockmovement_vehicle_delete_vehicle.py  0005_remove_fleet_arrival_time_and_more.py  0006_stockmovement_batch_no.py  0007_rename_employee_id_warehouseemployee_emp_id_and_more.py  0008_alter_warehouseemployee_unique_together_and_more.py  0009_rename_plate_number_fleet_fleet_code.py  0010_alter_fleetmovement_current_location_checkpoint.py  0011_alter_fleetmovement_current_location_checkpoint.py  0012_alter_fleetmovement_fleet.py  0013_delete_productimage.py  0014_alter_fleetmovement_fleet.py  0015_stock_warehouse.py  0016_stockproductqty.py  0017_remove_stock_product_remove_stock_quantity_and_more.py  0018_rename_vehicle_stockmovement_fleet.py  0019_product_minimum_threshold.py  0020_warehouse_current_stock.py  0021_remove_stockmovement_movement_type_and_more.py  0022_remove_product_minimum_threshold_and_more.py  (+4 more)
smart_warehouse_management/: .env  asgi.py  settings.py  urls.py  wsgi.py
users/: admin.py  apps.py  filters.py  models.py  permissions.py  seed.py  serializers.py  signals.py  urls.py  views.py
(+30 files in other folders)
